[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/RockBlock.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/img/fixed/dark_rocks.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/sfx/error.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/FallingBlocks.gd" type="Script" id=4]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.1
bounce = 0.1

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 600 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 600, 30 )

[sub_resource type="Animation" id=4]
resource_name = "bgmove"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BG:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 20.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}

[node name="FallingBlocks" type="Node2D"]
script = ExtResource( 4 )
RockBlock = ExtResource( 1 )

[node name="Walls" type="Node2D" parent="."]

[node name="Wall" type="StaticBody2D" parent="Walls"]
position = Vector2( 100, 0 )
physics_material_override = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="Walls/Wall"]
shape = SubResource( 2 )

[node name="Wall2" type="StaticBody2D" parent="Walls"]
position = Vector2( 200, 0 )
physics_material_override = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="Walls/Wall2"]
shape = SubResource( 2 )

[node name="Wall3" type="StaticBody2D" parent="Walls"]
position = Vector2( 300, 0 )
physics_material_override = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="Walls/Wall3"]
shape = SubResource( 2 )

[node name="Wall4" type="StaticBody2D" parent="Walls"]
position = Vector2( 400, 0 )
physics_material_override = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="Walls/Wall4"]
shape = SubResource( 2 )

[node name="Wall5" type="StaticBody2D" parent="Walls"]
position = Vector2( 500, 0 )
physics_material_override = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="Walls/Wall5"]
shape = SubResource( 2 )

[node name="Wall6" type="StaticBody2D" parent="Walls"]
position = Vector2( 600, 0 )
physics_material_override = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="Walls/Wall6"]
shape = SubResource( 2 )

[node name="Wall7" type="StaticBody2D" parent="Walls"]
position = Vector2( 700, 0 )
physics_material_override = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="Walls/Wall7"]
shape = SubResource( 2 )

[node name="Wall8" type="StaticBody2D" parent="Walls"]
position = Vector2( 800, 0 )
physics_material_override = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="Walls/Wall8"]
shape = SubResource( 2 )

[node name="Wall9" type="StaticBody2D" parent="Walls"]
position = Vector2( 900, 0 )
physics_material_override = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="Walls/Wall9"]
shape = SubResource( 2 )

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2( 510, 600 )
physics_material_override = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="Ground"]
shape = SubResource( 3 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 506.484, 299.128 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "bgmove"
anims/bgmove = SubResource( 4 )

[node name="AudioError" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AudioWord" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="TimerSayTheWord" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="finished" from="AudioWord" to="." method="_on_AudioWord_finished"]
[connection signal="timeout" from="TimerSayTheWord" to="." method="_on_TimerSayTheWord_timeout"]
